--- a/index.html
+++ b/index.html
@@ -120,6 +120,6 @@
             </div>
         </div>
     </footer>
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
 </body>
 </html>
