Hide all caught filter button working

--- a/index.html
+++ b/index.html
@@ -27,29 +27,42 @@
                     <div class="container">
                         <div class="tabs">
                             <div class="tab-buttons"></div>
-                            <div class="tab-content"></div>
-                        </div>
-                        <div class="quick-options-wrapper">
-                            <button class="quick-options-toggle">
-                                Quick Options ▼
-                            </button>
-                            <div class="quick-options-panel">
-                                <div class="quick-options-content">
-                                    <h3 class="quick-options-header">Mark all as caught:</h3>
-                                    <div class="quick-options-group">
-                                        <button class="quick-action quality-action" data-quality="0">Normal</button>
-                                        <button class="quick-action quality-action" data-quality="1">Shining</button>
-                                        <button class="quick-action quality-action" data-quality="2">Glistening</button>
-                                        <button class="quick-action quality-action" data-quality="3">Opulent</button>
-                                        <button class="quick-action quality-action" data-quality="4">Radiant</button>
-                                        <button class="quick-action quality-action" data-quality="5">Alpha</button>
-                                    </div>
-                                    <div class="quick-options-separator"></div>
-                                    <div class="quick-options-group">
-                                        <button class="quick-action danger-action" data-action="deselect-all">Clear All</button>
+                            <div class="quick-options-wrapper">
+                                <button class="quick-options-toggle">
+                                    Quick Options ▼
+                                </button>
+                                <div class="quick-options-panel">
+                                    <div class="quick-options-content">
+                                        <h3 class="quick-options-header">Mark all as caught:</h3>
+                                        <div class="quick-options-group">
+                                            <button class="quick-action quality-action" data-quality="0">Normal</button>
+                                            <button class="quick-action quality-action" data-quality="1">Shining</button>
+                                            <button class="quick-action quality-action" data-quality="2">Glistening</button>
+                                            <button class="quick-action quality-action" data-quality="3">Opulent</button>
+                                            <button class="quick-action quality-action" data-quality="4">Radiant</button>
+                                            <button class="quick-action quality-action" data-quality="5">Alpha</button>
+                                        </div>
+                                        <div class="quick-options-separator"></div>
+                                        <div class="quick-options-group">
+                                            <button class="quick-action danger-action" data-action="deselect-all">Clear All</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="filters-wrapper">
+                                <button class="filters-toggle">
+                                    Filters ▼
+                                </button>
+                                <div class="filters-panel">
+                                    <div class="filters-content">
+                                        <div class="filters-group">
+                                            <h3 class="filters-header">Hide caught:</h3>
+                                            <button class="filter-button" data-filter="all-qualities">All qualities</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-content"></div>
                         </div>
                     </div>
                 </div>
