Added quality filter button placeholders, fixed clear all button not working

--- a/index.html
+++ b/index.html
@@ -56,10 +56,21 @@
                                 </button>
                                 <div class="filters-panel">
                                     <div class="filters-content">
+                                        <h3 class="filters-header">Hide caught:</h3>
                                         <div class="filters-group">
-                                            <h3 class="filters-header">Hide caught:</h3>
                                             <button class="filter-button" data-filter="all-qualities">All qualities</button>
                                         </div>
+                                        <div class="filters-separator"></div>
+                                        <h3 class="filters-header">Filter by quality:</h3>
+                                        <div class="filters-group">
+                                            <button class="quick-action quality-filter" data-quality="0">Normal</button>
+                                            <button class="quick-action quality-filter" data-quality="1">Shining</button>
+                                            <button class="quick-action quality-filter" data-quality="2">Glistening</button>
+                                            <button class="quick-action quality-filter" data-quality="3">Opulent</button>
+                                            <button class="quick-action quality-filter" data-quality="4">Radiant</button>
+                                            <button class="quick-action quality-filter" data-quality="5">Alpha</button>
+                                        </div>
+                                        <div class="filters-separator"></div>
                                     </div>
                                 </div>
                             </div>
