Fixed all filters

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                                     <div class="quick-options-content">
                                         <h3 class="quick-options-header">Mark all as caught:</h3>
                                         <div class="quick-options-group">
-                                            <button class="quick-action quality-action" data-quality="0">Normal</button>
-                                            <button class="quick-action quality-action" data-quality="1">Shining</button>
-                                            <button class="quick-action quality-action" data-quality="2">Glistening</button>
-                                            <button class="quick-action quality-action" data-quality="3">Opulent</button>
-                                            <button class="quick-action quality-action" data-quality="4">Radiant</button>
-                                            <button class="quick-action quality-action" data-quality="5">Alpha</button>
+                                            <button class="quick-action quality-action" data-quality="0" data-action="activate">Normal</button>
+                                            <button class="quick-action quality-action" data-quality="1" data-action="activate">Shining</button>
+                                            <button class="quick-action quality-action" data-quality="2" data-action="activate">Glistening</button>
+                                            <button class="quick-action quality-action" data-quality="3" data-action="activate">Opulent</button>
+                                            <button class="quick-action quality-action" data-quality="4" data-action="activate">Radiant</button>
+                                            <button class="quick-action quality-action" data-quality="5" data-action="activate">Alpha</button>
                                         </div>
                                         <div class="quick-options-separator"></div>
                                         <div class="quick-options-group">
@@ -56,12 +56,14 @@
                                 </button>
                                 <div class="filters-panel">
                                     <div class="filters-content">
-                                        <h3 class="filters-header">Hide caught:</h3>
-                                        <div class="filters-group">
-                                            <button class="filter-button" data-filter="all-qualities">All qualities</button>
+                                        <h3 class="filters-header">Hide caught by quality:</h3>
+                                        <div style="display: none;">
+                                            <div class="filters-group">
+                                                <button class="filter-button" data-filter="all-qualities">All qualities</button>
+                                            </div>
+                                            <div class="filters-separator"></div>
+                                            <h3 class="filters-header">Filter by quality:</h3>
                                         </div>
-                                        <div class="filters-separator"></div>
-                                        <h3 class="filters-header">Filter by quality:</h3>
                                         <div class="filters-group">
                                             <button class="quick-action quality-filter" data-quality="0">Normal</button>
                                             <button class="quick-action quality-filter" data-quality="1">Shining</button>
@@ -70,7 +72,6 @@
                                             <button class="quick-action quality-filter" data-quality="4">Radiant</button>
                                             <button class="quick-action quality-filter" data-quality="5">Alpha</button>
                                         </div>
-                                        <div class="filters-separator"></div>
                                     </div>
                                 </div>
                             </div>
